--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;500;700;800;900&family=Poppins:wght@400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Literata:opsz,wght@7..72,300;7..72,400;7..72,500;7..72,600;7..72,700;7..72,800;7..72,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Miniver&display=swap');
+
+
 :root {
   --brand-main: #000036;
   --brand-feature: #00e5b2;
@@ -18,7 +20,6 @@
 
 html {
   height: 100%; 
-
 }
 
 * {
@@ -102,19 +103,7 @@ color: white;
 }
 
 
-.large-feature-text {
-  font-size : clamp(2rem, 15vw, 7rem);
-  font-family: 'Advent Pro', sans-serif;
-  font-weight: 900; 
-  padding: 0;
-  margin: 0 auto; 
-  /* max-width: 50%; */
-  position: relative;
-  z-index: 10; 
-  text-align: center; 
-  color: white;
-  /* text-shadow: 0 0 15px var(--brand-feature-opacity); */
-}
+
 
 .flex-column {
   flex-direction: column; 
@@ -217,12 +206,54 @@ color: white;
   max-width: 96vw; 
 }
 
+.letterbox {
+  flex-direction: row; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  position: relative;
+  gap: 10px; 
+  height: 100vh; 
+  width: 100vw;
+  text-align: center;
+  background: linear-gradient(45deg,var(--brand-feature),var(--brand-main),#000);
+  opacity: 1;
+}
+
+
 .hero-text {
   display: flex; 
   align-items: center; 
   justify-content: center; 
-  position: absolute;
+  /* position: absolute; */
   width: 50%; 
+}
+
+.large-feature-text {
+  font-size : clamp(2rem, 5vw, 7rem);
+  font-family: 'Literata', sans-serif;
+  font-weight: 600; 
+  padding: 0;
+  margin: 0 auto; 
+  /* max-width: 50%; */
+  z-index: 10; 
+  /* text-align: left;  */
+  color: white;
+  /* text-shadow: 0 0 15px var(--brand-feature-opacity); */
+}
+
+.dogoffice {
+  width: 50%; 
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+}
+
+.dogoffice img {
+  width: 60%; 
+  border-radius: 100%; 
+
 }
 
 .flex-centered-start {
@@ -342,7 +373,7 @@ border-radius: 30px;
 .line-below {
   display: table; 
   border-bottom: 12px solid var(--brand-feature); 
-  margin-left: 10px; 
+
 }
 
 .underline-feature {
@@ -491,6 +522,18 @@ box-shadow: 2px 2px 10px var(--brand-main); */
   box-shadow: 0 0 10px rgba(0,0,0,.4);
 
 }
+
+.blue-panel-2 {
+  background: var(--brand-main);
+  color: white; 
+  padding: 15px 15px 40px 15px; 
+  border-radius: 15px; 
+  /* background: white; 
+  color: var(--brand-main); */
+  box-shadow: 0 0 10px rgba(0,0,0,.4);
+width: 100%; 
+}
+
 
 
 .blue-panel-2 {
@@ -716,18 +759,6 @@ justify-content: center;
   position: relative;
 }
 
-.letterbox {
-  flex-direction: row; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-  position: relative;
-  gap: 10px; 
-  height: 100vh; 
-  width: 100vw;
-  position: relative;
-  overflow: hidden;
-}
 
 #techy-section {
   text-align: left; 
@@ -749,10 +780,88 @@ justify-content: center;
   font-size: 1.1em;
 }
 
+
+
+.feature-container {
+  text-align: left; 
+  max-width: 1920px; 
+  background: white;
+  width: 100%; 
+  padding: 40px; 
+  position: relative;
+  background: white; 
+  display: flex; 
+  align-items: center;  
+  margin-bottom: 20px; 
+}
+.feature-container h1 {
+  color: var(--brand-main);
+}
+
+.feature-container p {
+  font-size: 1.1em;
+}
+.feature-container-right {
+  width: 50%; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  flex-direction: column;
+ }
+
+ .feature-link {
+  background: var(--brand-feature); 
+  color: var(--brand-main);
+  padding: 10px; 
+  border-radius: 30px; 
+  display: inline-flex; 
+  align-items: center; 
+  justify-content: center; 
+  font-weight: bold; 
+  border: 4px solid var(--brand-feature);
+  transition: 1s;
+ }
+
+.feature-link:hover, .feature-link:focus {
+  color: white;
+  background: var(--brand-main);
+  text-decoration: underline; 
+}
+
+.darker {
+  background: var(--brand-main);
+  color: white; 
+}
+
+.darker h1 {
+  color: white;
+}
+
+.lighter {
+  background: var(--brand-feature-opacity);
+  color: var(--brand-main); 
+}
+
+.lighter h1 {
+  color: var(--brand-main);
+}
+
 #techBox {
   width: 50%;
 }
 
+.tech-box {
+  width: 50%; 
+}
+
+.tag-class {
+  padding: 5px; 
+  font-size: 9pt; 
+  background: var(--brand-feature); 
+  color: var(--brand-main);
+  display: table; 
+  font-family: 'Roboto', sans-serif; 
+}
 
 #iconsbox {
 width: 50%; 
@@ -1586,6 +1695,17 @@ border-radius: 30px;
 
 }
 
+.hackabilityimage {
+  width: 300px; 
+}
+
+.hackabilityimage:nth-child(odd) {
+  transform: rotate(3deg); 
+}
+
+.hackabilityimage:nth-child(even) {
+  transform: rotate(-3deg); 
+}
 
 @media screen and (max-width: 1000px) {
   .nav-links .nav-link {
@@ -1629,8 +1749,27 @@ top: 0;
   
 }
 
+.feature-container {
+  flex-wrap: wrap; 
+  margin: 0;
+  padding: 0; 
+  flex-direction: column;
+  padding-bottom: 100px; 
+  width: 100vw; 
+  padding: 0 40px 40px 40px; 
+}
+
+
+
 #techBox {
   width: 100%; 
+}
+.tech-box {
+  width: 100%; 
+}
+
+.feature-container-right {
+ width: 100%; 
 }
 
 #iconsbox {
@@ -1721,6 +1860,27 @@ font-size: 9pt;
 
 .blog-post-container {
   padding: 15px; 
+}
+/* 
+homepage stuff with max-width 1000 */
+.letterbox {
+  flex-direction: column; 
+ 
+}
+
+
+.hero-text {
+  width: 100%; 
+}
+
+
+
+.dogoffice {
+  width: 100%; 
+}
+
+.dogoffice img {
+  width: 60%; 
 }
 
 }
