--- a/src/App.css
+++ b/src/App.css
@@ -240,6 +240,7 @@ color: white;
   /* text-align: left;  */
   color: white;
   /* text-shadow: 0 0 15px var(--brand-feature-opacity); */
+  max-width: 90%; 
 }
 
 .dogoffice {
@@ -463,10 +464,11 @@ height: 100%;
 .flex-gamification {
   display: flex; 
   align-items: center; 
-  justify-content: space-between; 
+  justify-content: center; 
   padding: 40px; 
   gap: 10px; 
-
+  max-width: 1920px;
+  
 }
 
 #one-underline {
@@ -476,8 +478,8 @@ color: white;
 #flex-gamification-left {
   width: 50%; 
   display: flex; 
-  align-items: start; 
-  justify-content: start; 
+  align-items: center; 
+  justify-content: center; 
   flex-direction: column;
 }
 
@@ -681,7 +683,7 @@ justify-content: center;
 }
 
 #branding:after {
-  content: "Standout." 
+  content: "Standout" 
 }
 /* 
 .branding-p {
@@ -689,19 +691,19 @@ justify-content: center;
 } */
 
 #webDesign::after {
-  content: "Perfection."
+  content: "Iterative"
 }
 
 #softwareDevelopment::after {
-  content: "Gamification."
+  content: "Gamified"
 }
 
 #corporateEducation::after {
-  content: "Interactive."
+  content: "Interactive"
 }
 
 #communications::after {
-  content: "Engaging."
+  content: "Arresting"
 }
 
 #accessibility::after {
@@ -820,6 +822,7 @@ justify-content: center;
   font-weight: bold; 
   border: 4px solid var(--brand-feature);
   transition: 1s;
+  text-align: center;
  }
 
 .feature-link:hover, .feature-link:focus {
@@ -1007,6 +1010,7 @@ padding-bottom: 20px;
   color: var(--brand-main); 
   border: 5px solid rgb(240, 240, 240,1); 
   border-radius: 20px;
+  cursor: pointer; 
   
   /* border-left: 10px solid var(--brand-main); */
 }
@@ -1027,8 +1031,8 @@ padding-bottom: 20px;
 
 .offering h2 {
   margin: 0; 
-  font-family: 'Advent Pro';
   font-size: 2em;
+  font-weight: 400; 
 }
 
 .offering ul {
@@ -1036,6 +1040,7 @@ padding-bottom: 20px;
   opacity: 0;  
 transform: scale(.1);
 font-size: 1pt;  
+text-align:left; 
 }
 
 .offering:hover {
@@ -1063,6 +1068,19 @@ border: 5px solid var(--brand-main);
   animation-fill-mode: forwards; 
   pointer-events:none;
 }
+
+
+.offering:active ul {
+  font-size: 12pt; 
+  transition: .5s; 
+  opacity: 0;
+  animation-name: scaler; 
+  animation-duration: 1s; 
+  animation-delay: .5s; 
+  animation-fill-mode: forwards; 
+  pointer-events:none;
+}
+
 
 .faangledown {
   transform: rotate(-90deg);
@@ -1697,6 +1715,7 @@ border-radius: 30px;
 
 .hackabilityimage {
   width: 300px; 
+  box-shadow: 10px 10px var(--brand-feature-opacity); 
 }
 
 .hackabilityimage:nth-child(odd) {
@@ -1757,6 +1776,7 @@ top: 0;
   padding-bottom: 100px; 
   width: 100vw; 
   padding: 0 40px 40px 40px; 
+  margin-bottom: 30px;
 }
 
 
@@ -1793,8 +1813,9 @@ top: 0;
 
 .flex-gamification {
   flex-direction: column;
-  padding: 0; 
-  width: 100%;
+  width: 100vw;
+  max-width: 1920px;
+  padding: 10px;
 }
 
 #flex-gamification-left {
@@ -1865,7 +1886,7 @@ font-size: 9pt;
 homepage stuff with max-width 1000 */
 .letterbox {
   flex-direction: column; 
- 
+ gap: 20px; 
 }
 
 
